correcion scroll responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Ricardo Venturino S.A.</title>
 </head>
 <body class="fondo">
-    <header >
+    <header class="posnav">
 
         <nav class="navbar navbar-expand-lg barracol"  >
             <div class="container-fluid">
