--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -17,7 +17,7 @@
 </head>
 <body id="conteiner__nos">
   
-    <header >
+    <header  class="posnav">
   
 
         <nav class="navbar navbar-expand-lg barracol"  >
@@ -63,8 +63,10 @@
             </div>
         </nav>
     <header >
-
-    <main id="conteiner__nos">
+    <section class="titnos">
+      <h1>¿Quienes somos?</h1>
+    </section>
+    <main class="posnos">
 
               <div class="card-group">
                 <div class="card">
