--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -19,7 +19,7 @@
     <title>Sucursales</title>
 </head>
 <body id="conteiner__suc">
-  <header >
+  <header  class="posnav" >
 
     <nav class="navbar navbar-expand-lg barracol"  >
         <div class="container-fluid">
@@ -65,11 +65,13 @@
     </nav>
   <header >
 
-          
+  <article class="titsuc">
+    <h1>¿Donde nos encontramos?</h1>
+  </article>   
   <main>
       <div><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1703036.892535728!2d-61.746255000000005!3d-33.521043!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sus!4v1674946791253!5m2!1ses!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
   </main>
-  <section>
+  <section class="ubisuc">
               <div class="card" style="width: 18rem;">
                 <div class="card-body">
                   <h5 class="card-title">Isla Verde-Casa Central</h5>
