--- a/pages/areas.html
+++ b/pages/areas.html
@@ -15,8 +15,8 @@
     
     <title>Nuestras Areas</title>
 </head>
-<body>
-    <header >
+<body id="conteiner__area">
+    <header class="posnav" >
 
         <nav class="navbar navbar-expand-lg barracol"  >
             <div class="container-fluid">
@@ -62,8 +62,11 @@
         </nav>
     <header >
 
+      <section class="titarea">
+        <h1>Nuestras Areas</h1>
+      </section>
 
-    <main>
+    <main class="posarea">
                 <div class="card mb-3">
                     <img src="../img/administración-de-empresas-presencial.jpg" class="card-img-top" alt="fondo de administracion">
                     <div class="card-body">
