--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     <title>Contacto</title>
 </head>
 <body id="conteiner__cont">
-    <header >
+    <header class="posnav" >
   
 
         <nav class="navbar navbar-expand-lg barracol"  >
@@ -64,6 +64,9 @@
             </div>
         </nav>
     <header >
+    <section class="titcon">
+      <h1>Contactate con nosotros</h1>
+    </section>
 
     <main id="conteiner_contwo">
 
