--- a/pages/areas.html
+++ b/pages/areas.html
@@ -10,15 +10,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
+    <!--animacion-->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!--aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--icon -->
     <link rel="stylesheet" href="https://kit.fontawesome.com/6fa697ca83.css" crossorigin="anonymous">
+    <!--tipografia-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+       <!--tip titulo-->
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+
     
     <title>Nuestras Areas</title>
 </head>
 <body id="conteiner__area">
     <header class="posnav" >
 
-        <nav class="navbar navbar-expand-lg barracol"  >
+        <nav class="navbar navbar-expand-lg barracol letranav"  >
             <div class="container-fluid">
               <a class="navbar-brand">RICARDO VENTURNICO S.A.</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,12 +77,14 @@
         </nav>
     <header >
 
-      <section class="titarea">
+      <section class="titarea letraini">
         <h1>Nuestras Areas</h1>
       </section>
 
     <main class="posarea">
-                <div class="card mb-3">
+                <div class="card mb-3"  data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">>
                     <img src="../img/administración-de-empresas-presencial.jpg" class="card-img-top" alt="fondo de administracion">
                     <div class="card-body">
                       <h5 class="card-title">Administracion</h5>
@@ -75,7 +92,9 @@
                       <p class="card-text"><small class="text-muted">RICARDO VENTURNICO S.A.</small></p>
                     </div>
                </div>
-                <div class="card">
+                <div class="card" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">>
                     <img src="../img/repuestos.webp" class="card-img-bottom" alt="repuestos de fabrica rosario jonh deere">
                     <div class="card-body">
                       <h5 class="card-title">Repuestos</h5>
@@ -84,7 +103,9 @@
                     </div>
                     
                 </div>
-                <div class="card mb-3">
+                <div class="card mb-3" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">>
                     <img src="../img/servicios.webp" class="card-img-top" alt="maquina jonh deere en accion">
                     <div class="card-body">
                       <h5 class="card-title">Servicios</h5>
@@ -92,7 +113,9 @@
                       <p class="card-text"><small class="text-muted">RICARDO VENTURNICO S.A.</small></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">>
                     <img src="../img/ams2.jpg" class="card-img-bottom" alt="puesta de sol en campo">
                     <div class="card-body">
                       <h5 class="card-title">AMS</h5>
@@ -103,7 +126,7 @@
                 </div>
     </main>
 
-    <footer class="lookfoot">
+    <footer class="lookfoot letranav">
   
  
   
@@ -186,6 +209,11 @@
 <script src="https://kit.fontawesome.com/6fa697ca83.js" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<!--aos-->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 
 </body>
