--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,8 +10,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
+    <!--animacion-->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!--aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--icon -->
     <link rel="stylesheet" href="https://kit.fontawesome.com/6fa697ca83.css" crossorigin="anonymous">
+    <!--tipografia-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+       <!--tip titulo-->
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+
     
     <title>Acerca de Nosotros</title>
 </head>
@@ -20,7 +35,7 @@
     <header  class="posnav">
   
 
-        <nav class="navbar navbar-expand-lg barracol"  >
+        <nav class="navbar navbar-expand-lg barracol letranav"  >
             <div class="container-fluid">
               <a class="navbar-brand">RICARDO VENTURNICO S.A.</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,12 +78,12 @@
             </div>
         </nav>
     <header >
-    <section class="titnos">
+    <section class="titnos letraini">
       <h1>¿Quienes somos?</h1>
     </section>
     <main class="posnos">
 
-              <div class="card-group">
+              <div class="card-group" data-aos="fade-up-left">
                 <div class="card">
                   <img src="../img/nbsotros/iniciodddas.jpg" class="card-img-top" alt="maquina jonh deer vieja y actual">
                   <div class="card-body">
@@ -77,7 +92,7 @@
                     <p class="card-text"><small class="text-muted">Ricardo Venturino S.A.</small></p>
                   </div>
               </div>
-              <div class="card">
+              <div class="card"data-aos="fade-down-right">
                   <img src="../img/ukltnwe.jfif" class="card-img-top" alt="maquina jonh deere junto a concencionario venturino ">
                   <div class="card-body">
                     <h5 class="card-title">DONDE ENCONTRARNOS</h5>
@@ -85,7 +100,7 @@
                     <p class="card-text"><small class="text-muted">Ricardo Venturino S.A.</small></p>
                   </div>
              </div>
-              <div class="card">
+              <div class="card"data-aos="fade-down-left">
                   <img src="../img/consneb.jpg" class="card-img-top" alt="empleados de venturino s.a. frente a agencia">
                   <div class="card-body">
                     <h5 class="card-title">NUESTRA MISION</h5>
@@ -99,7 +114,7 @@
     </main>
 
 
-    <footer class="lookfoot">
+    <footer class="lookfoot letranav">
   
  
   
@@ -181,6 +196,11 @@
 <script src="https://kit.fontawesome.com/6fa697ca83.js" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<!--aos-->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
