link facebook e instagram

--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -201,9 +201,9 @@
           <section class="">
      
             <div class="posicon">
-          <a href="" class="me-4 link-secondary">
+          <a target="_blank" href="https://www.instagram.com/venturinojohndeere/" class="me-4 link-secondary">
             <i class="fab fa-instagram"></i>
-          <a href="" class="me-4 link-secondary">
+          <a target="_blank" href="https://www.facebook.com/venturinojohndeere" class="me-4 link-secondary">
             <i class="fab fa-facebook-f"></i>
           </a>
         
