modificaciones en textos, fotos e icono de pestaña

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ricardo Venturino S.A. es una empresa con una extensa trayectoria en el rubro. Se encuentra en contante crecimiento, conocenos a fondo.">
     <meta name="keywords" content="Maquinarias agricolas, Historia, jonh deere">
+    <!--icon pestaña-->
+    <link rel="icon"  type="image/png" href= "../img/carrusel/img1.jpg">
+
     <!-- boot -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
@@ -90,6 +93,9 @@
         </div>
         <div class="carousel-item">
           <img src="../img/facebook/nos/corregida4.jpg" class="d-block w-100" alt="Empleados de venturino en feria">
+        </div>
+        <div class="carousel-item">
+          <img src="../img/facebook/nos/corregida5.jpg" class="d-block w-100" alt="Empleados de venturino en feria">
         </div>
       </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
