--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ricardo Venturino S.A. es una empresa reconocida mundialmente, que comercializa maquinarias agricolas Jonh Deere y Pla. Además de brindar excelente servicio de posventa a sus clientes.">
     <meta name="keywords" content="Maquinarias agricolas, Pla, jonh deere, repuestos">
-
+    <!--icon pestaña-->
+    <link rel="icon"  type="image/png" href= "img/carrusel/img1.jpg">
     
     <!-- boot -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
