--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ricardo Venturino S.A. cuenta con un excelente canal de comunicación para que nuestros clientes puedan estar en contacto durante cualquier momento del día. El area de repuestos, servicios y AMS cuentan con guardias de emergencias atendidas por sus empleados para resolver cualquier imprevisto que le surja al cliente ">
     <meta name="keywords" content="Maquinarias agricolas, horarios de atencion, jonh deere">
+    <!--icon pestaña-->
+    <link rel="icon"  type="image/png" href= "../img/carrusel/img1.jpg">
+
      <!-- boot -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-     <!-- css -->
-     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- css -->
+    <link rel="stylesheet" href="../css/style.css">
      <!--animacion-->
     <link
     rel="stylesheet"
