--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ricardo Venturino S.A. ha tenido un notorio crecimiento a lo largo de los años y hoy en día cuenta con cuatro sucursales, dos en la pcia. de Córdoba y dos en la pcia. de Santa Fe">
     <meta name="keywords" content="Maquinarias agricolas, horarios de atencion, jonh deere">
-
+    <!--icon pestaña-->
+    <link rel="icon"  type="image/png" href= "../img/carrusel/img1.jpg">
 
     <!-- boot -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -25,9 +26,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
        <!--tip titulo-->
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
 
     
   
@@ -81,7 +82,7 @@
   <header >
 
   <article class="titsuc letraini">
-    <h1>¿Donde nos encontramos?</h1>
+    <h1>¿Dónde nos encontramos?</h1>
   </article>   
   <main>
     <div><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1703036.892535728!2d-61.746255000000005!3d-33.521043!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sus!4v1674946791253!5m2!1ses!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
