nuevos cambios en tipografia

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,10 +25,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Saira+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap" rel="stylesheet">
        <!--tip titulo-->
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
 
     
 
@@ -129,8 +135,8 @@
   <main id="conteiner_contwo">
     <div class="card" style="width: 18rem;"data-aos="flip-right">
       <img src="../img/suciv.png" class="card-img-top" alt="sucursal isla verde ricardo venturino">
-      <div class="card-body">
-        <p class="card-text">
+      <div class="card-body letrasuc">
+        <p class="card-textb">
           <h2>Isla Verde</h2>
           <div>
                         Emergencias  Repuestos: (03468) 15539779 (03468) 15419814
@@ -151,7 +157,7 @@
 
     <div class="card" style="width: 18rem;"data-aos="flip-right">
       <img src="../img/sucarias.png" class="card-img-top" alt="sucursal arias ricardo venturino">
-      <div class="card-body">
+      <div class="card-body letrasuc">
         <p class="card-text">
           <h2>Arias</h2>
           <div>
@@ -175,7 +181,7 @@
 
     <div class="card" style="width: 18rem;"data-aos="flip-right">
       <img src="../img/sucvt.png" class="card-img-top" alt="sucursal venado tuerto ricardo venturino">
-      <div class="card-body">
+      <div class="card-body letrasuc">
         <p class="card-text">
           <h2>Venado Tuerto</h2>
           <div>
@@ -198,7 +204,7 @@
 
     <div class="card" style="width: 18rem;"data-aos="flip-right">
       <img src="../img/succasilda.png" class="card-img-top" alt="sucursal casilda ricardo venturino">
-      <div class="card-body">
+      <div class="card-body letrasuc">
         <p class="card-text">
           <h2>Casilda</h2>
           <div>
