--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -25,6 +25,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap" rel="stylesheet">
        <!--tip titulo-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -89,7 +92,7 @@
   </main>
   <section class="ubisuc">
     <div class="card" style="width: 18rem;"data-aos="flip-up">
-      <div class="card-body">
+      <div class="card-body letratip">
         <h5 class="card-title">Isla Verde-Casa Central</h5>
         <h6 class="card-subtitle mb-2 text-muted">Ruta Prov. N° 11 C.P.: 2661 Córdoba, Argentina</h6>
         <p class="card-text">Tel: (03468) 496060 
@@ -104,7 +107,7 @@
     </div>
 
     <div class="card" style="width: 18rem;"data-aos="flip-down">
-      <div class="card-body">
+      <div class="card-body letratip">
         <h5 class="card-title">Arias</h5>
         <h6 class="card-subtitle mb-2 text-muted">Av. San Martín y Ruta Nac. Nº 8 C.P.: 2624 Córdoba, Argentina</h6>
           <p class="card-text">Tel: (03468) 441949
@@ -119,7 +122,7 @@
     </div>
 
     <div class="card" style="width: 18rem;"data-aos="flip-up">
-      <div class="card-body">
+      <div class="card-body letratip">
         <h5 class="card-title">Venado Tuerto</h5>
         <h6 class="card-subtitle mb-2 text-muted">Ruta Nacional Nº 8 KM 362 C.P.: 2600 Santa Fe, Argentina</h6>
         <p class="card-text">Tel: (03462) 463732
@@ -134,7 +137,7 @@
     </div>
 
     <div class="card" style="width: 18rem;"data-aos="flip-down">
-      <div class="card-body">
+      <div class="card-body letratip">
         <h5 class="card-title">Casilda</h5>
         <h6 class="card-subtitle mb-2 text-muted">Bv. Colón 2078 (Ruta Nac. Nº 33)C.P.: 2170  Santa Fe, Argentina</h6>
         <p class="card-text">Tel: (03464) 428591 
