Cambios tipofrafia, nuevas animaciones

--- a/index.html
+++ b/index.html
@@ -29,10 +29,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <!--tip text-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet">
 
     <title>Ricardo Venturino S.A.</title>
 </head>
@@ -41,7 +53,7 @@
 
     <nav class="navbar navbar-expand-lg barracol letranav"  >
       <div class="container-fluid">
-        <a class="navbar-brand">RICARDO VENTURINO S.A.</a>
+        <a href="index.html" class="navbar-brand">RICARDO VENTURINO S.A.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -109,8 +121,8 @@
   </article>
   <main>
     <div class="letraini">
-      <h1>Bienvenido</h1>
-      <p>En Ricardo Venturino S.A. creemos firmemente que nuestro accionar es reflejo de nuestros valores. Es por eso, asumimos el compromiso de cumplir y mejorar permanentemente nuestra Organización como parte de nuestra estrategia de negocios dirigida a mantener el liderazgo en base a nuestros valores: Ética - Calidad - Compromiso - Humildad - Profesionalismo - Innovación
+      <h1 data-aos="fade-right">Bienvenido</h1>
+      <p data-aos="fade-left" >En Ricardo Venturino S.A. creemos firmemente que nuestro accionar es reflejo de nuestros valores. Es por eso, asumimos el compromiso de cumplir y mejorar permanentemente nuestra Organización como parte de nuestra estrategia de negocios dirigida a mantener el liderazgo en base a nuestros valores: Ética - Calidad - Compromiso - Humildad - Profesionalismo - Innovación
 
       </p>
     </div>
