--- a/pages/areas.html
+++ b/pages/areas.html
@@ -26,18 +26,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
        <!--tip titulo-->
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 
     
-    <title>Nuestras Areas</title>
+    <title>Ricardo Venturino S.A.-Nuestras Areas</title>
 </head>
 <body id="conteiner__area">
   <header class="posnav" >
     <nav class="navbar navbar-expand-lg barracol letranav"  >
       <div class="container-fluid">
-        <a class="navbar-brand">RICARDO VENTURINO S.A.</a>
+        <a href="../index.html" class="navbar-brand">RICARDO VENTURINO S.A.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,7 +83,7 @@
   <header >
 
   <section class="titarea letraini">
-    <h1>Nuestras Areas</h1>
+    <h1 data-aos="fade-down-right">Nuestras Areas</h1>
     <div>
       <div class="galeria" data-aos="zoom-in">
                 
