--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,17 +35,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 
     
 
  
-    <title>Contacto</title>
+    <title>Ricardo Venturino S.A.-Contacto</title>
 </head>
 <body id="conteiner__cont">
   <header class="posnav" >
     <nav class="navbar navbar-expand-lg barracol letranav"  >
       <div class="container-fluid">
-        <a class="navbar-brand">RICARDO VENTURINO S.A.</a>
+        <a href="../index.html" class="navbar-brand">RICARDO VENTURINO S.A.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -128,7 +131,7 @@
     </div>
   </article>
   <section class="titcon letraini">
-    <h1>Contactate con nosotros</h1>
+    <h1 data-aos="fade-down-right">Contactate con nosotros</h1>
   </section>
 
 
