--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -32,17 +32,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 
     
   
-    <title>Sucursales</title>
+    <title>Ricardo Venturino S.A.-Sucursales</title>
 </head>
 <body id="conteiner__suc">
   <header  class="posnav" >
 
     <nav class="navbar navbar-expand-lg barracol letranav"  >
       <div class="container-fluid">
-        <a class="navbar-brand">RICARDO VENTURINO S.A.</a>
+        <a href="../index.html" class="navbar-brand">RICARDO VENTURINO S.A.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -85,7 +88,7 @@
   <header >
 
   <article class="titsuc letraini">
-    <h1>¿Dónde nos encontramos?</h1>
+    <h1 data-aos="fade-down-right">¿Dónde nos encontramos?</h1>
   </article>   
   <main>
     <div><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1703036.892535728!2d-61.746255000000005!3d-33.521043!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sus!4v1674946791253!5m2!1ses!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
