--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -29,16 +29,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 
     
-    <title>Acerca de Nosotros</title>
+    <title>Ricardo Venturino S.A. -Acerca de Nosotros</title>
 </head>
 <body id="conteiner__nos">
   
   <header  class="posnav">
     <nav class="navbar navbar-expand-lg barracol letranav"  >
       <div class="container-fluid">
-        <a class="navbar-brand">RICARDO VENTURINO S.A.</a>
+        <a href="../index.html" class="navbar-brand">RICARDO VENTURINO S.A.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -109,7 +112,7 @@
     </div>
   </article>
   <section class="titnos letraini">
-    <h1>¿Quienes somos?</h1>
+    <h1 data-aos="fade-down-right">¿Quienes somos?</h1>
   </section>
   <main class="posnos">
     <div class="card-group" data-aos="fade-up-left">
