--- a/pages/areas.html
+++ b/pages/areas.html
@@ -25,6 +25,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet">
        <!--tip titulo-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -121,7 +124,7 @@
       data-aos-duration="2000">>
       <img src="../img/administración-de-empresas-presencial.jpg" class="card-img-top" alt="fondo de administracion">
       <div class="card-body">
-        <h5 class="card-title">Administracion</h5>
+        <h5 class="card-title ">Administracion</h5>
         <p class="card-text">Ricardo Venturino S.A. cuenta con un excelente equipo administrativo el cual trasmite absoluta confianza y transparencia.</p>
         <p class="card-text"><small class="text-muted">RICARDO VENTURNICO S.A.</small></p>
       </div>
