--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,6 +38,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
+    <!--tip img-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet">
 
     
 
@@ -100,21 +104,21 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../img/facebook/cont/fotocontacto.jpg" class="d-block w-100" alt="imagen contactate con nosotros">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block letraimg">
             <h5>Ricardo Venturino S.A.</h5>
             <p>No dudes en ponerte en contacto con nuestros represtantes de atencion.</p>
           </div>
         </div>
       <div class="carousel-item">
         <img src="../img/facebook/cont/benef.jpg" class="d-block w-100" alt="imagen beneficio ofrecido por ricardo venturino sa a sus clientes">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-none d-md-block letraimg">
           <h5>Ricardo Venturino S.A.</h5>
           <p>Accede hoy mismo a estos beneficios.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../img/facebook/cont/taerjeta.jpg" class="d-block w-100" alt="Oferta de pago para cliente de ricardo venturino sa">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block letraimg">
             <h5>Ricardo Venturino S.A.</h5>
             <p>No te pierdas esta oportunidad, acercate a tu sucursal más cercana.</p>
           </div>
